# pyco

./: .gitignore  404.html  index.html  index.rst  py-console.sln  py_console.sln  pyconsole.sln  readme.md  setup.cfg  setup.py
api/api/: index.html
api/color/: index.html
api/constants/: index.html
api/cursor/: index.html
api/io/: index.html
api/logging/: index.html
api/prefix/: index.html
api/progress/: index.html
api/terminal/: index.html
api/text/: index.html
api/utils/: index.html
demo/: demo-color-4-bit.py  demo-color-8-bit.py  demo-color.py  demo-cursor.py  demo-logging.py  demo-nonblocking.py  demo-print-message.py  demo-progress-bar.py  demo-terminal.py  demo-text.py  demo-user-input.py  demo-utils.py  demo1.py  demo2.py
docs/: 404.html  ansi.md  home.md  index.html  logging.md  progress-bars.md  readme.md  sidebar.md  terminal-io.md
docs/styles/: darklight.css  style.css  terminal-window.css
home/: index.html
logs/: log.txt
py-console/: example.py  py-console.pyproj  py_console.py
py_console/: example.py  py_console.py  py_console.pyproj
pyco/: __init__.py  _private.py  ansi.py  color.py  constants.py  cursor.py  input.py  logger.py  logging.py  prefix.py  progress.py  pyco.py  terminal.py  text.py  utils.py
pyconsole/: __init__.py  ansi.py  example.py  logger.py  pyco.py  pyconsole.py  pyconsole.pyproj  utils.py
pyconsole.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
quick-start/: index.html
scripts/: termynal.js
search/: search_index.json
sidebar/: index.html
styles/: style.css  terminal-window.css
