[metadata]
name = py-console
version = 0.0.1
author = Duplexes
author_email = author@example.com
description = A small example package
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/Duplexes/py-console
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6