[metadata]
name = Py-Console
version = 0.1
author = Duplexes
author_email = https://github.com/Duplexes/Py-Console
description = Some tools for printing with colors in the console, as well as logging functions.
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/Duplexes/Py-Console
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9