[metadata]
name = pyconsole
version = 0.4
author = Duplexes and LemonPi314
author_email = 49930425+LemonPi314@users.noreply.github.com
description = Some tools for printing with colors in the console, as well as logging functions.
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/Duplexes/pyconsole
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9